--- a/test.html
+++ b/test.html
@@ -1,5 +1,14 @@
-# Auto detect text files and perform LF normalization
-* text=auto
-<h1>Hey. My name is younes hariri </h1>
-<p>Hey again meet my friend janney</p>
-<a href="https://google.com"target="blank" title="yes you can click">click the fuck out of this link!!</a>
+<html>
+<head><title>training page</title>
+
+</head>
+<body>
+    <b1>hey my name is youneshariri</b1>
+    <p>this is the <b>second</b> text</p>
+    <a href="https://google.com"title="lets go to google">click this link</a>
+    <img src="img/photo.jpg">
+    
+
+
+</body>
+</html>
